Resolved how to lock html overflow when modal activates; avoided use of context and used document.querySelector instead since it's top-level element.

--- a/src/styles/history.scss
+++ b/src/styles/history.scss
@@ -133,11 +133,12 @@ $spacing: 20px;
       height: 100%;
       transform: translateY(100%);
       z-index: 101;
-      overflow-y: scroll;
+      overflow-y: hidden;
       transition: all 0.8s ease-in-out;
       // $easeinout: all 0.2s ease-in-out;
       &.in-view {
         transform: translateY(0%);
+        overflow-y: auto;
       }
       .modal-container {
         position: absolute;
